option('use_system_libs', type : 'boolean', value : true,
       description: 'Whether to generally link with system libraries')
option('use_asset_manager', type : 'boolean', value : false,
       description: 'Whether to use the Android asset manager')
option('tango_sdk', type : 'string',
       description: 'Absolute path to unpacked Tango SDK')
